--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,10 @@
     <main>
       <!-- Loads the specified .html file -->
       <load src="./partials/vite-promo.html" />
-      <!--<load src="./partials/badges.html" />-->
+      <ul style="display: none">
+        <li><a href="./1-timer.html">Gallery</a></li>
+        <li><a href="./2-snackbar.html">Form</a></li>
+      </ul>
     </main>
 
     <!--<load src="./partials/footer.html" />-->
